add_executable(test_array test_array.cpp)
target_link_libraries(test_array tt)

add_executable(test_image test_image.cpp)
target_link_libraries(test_image tt)

add_executable(test_util test_util.cpp)
target_link_libraries(test_util tt)

add_executable(test_type test_type.cpp)
target_link_libraries(test_type tt)

